# dott

./: .gitignore  Cargo.toml  LICENSE  README.md  example.py  flake.nix
.github/workflows/: ci.yml  release.yml
ci/: generate-pkgbuild.py
src/: error.rs  lib.rs  main.rs  prelude.rs
tests/: add.rs  fixtures.rs  install.rs  refresh.rs  sync.rs
