[package]
name = "dotr"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.1.1", features = ["derive", "unstable-doc"] }
console = "0.15.7"
dialoguer = "0.10.4"
directories = "5.0.1"
glob = "0.3.1"
path-absolutize = "3.1.0"
thiserror = "1.0.40"

[dev-dependencies]
assert_cmd = "2.0.11"
temp_testdir = "0.2.3"

